update edit template, bugfix, add new feature to edit main info

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -39,10 +39,21 @@
     color: #ffffff;
     outline: none;
 }
+.btn-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: #761c19;
+    color: #ffffff;
+    border-top:1px solid #5e5e5e;
+}
 .button_container .btn:last-child {
     border: none;
 }
 .button_container .btn.active,
+.edit .btn.active,
+.edit .btn:hover,
 .button_container .btn:hover {
     background: #313131;
     color: #ffffff;
@@ -116,6 +127,21 @@ img {
     position: absolute;
     right: 0;
     top: 0;
+}
+.own_options_wrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.own_options_wrapper .own_option {
+    display: flex;
+    flex-direction: column;
+    max-height: 70px;
+    padding-right: 5px;
+    width: 30%;
+}
+.own_option + .own_option {
+    width: 70%;
 }
 .options_wrapper {
     display: flex;
@@ -223,6 +249,7 @@ img {
     display: none;
     height: 100%;
 }
+
 .list_wrapper:hover .edit {display: block;}
 .footer_info {
     display: flex;
@@ -283,16 +310,24 @@ img {
     padding-top: 0;
     margin: 0 auto;
 }
+.example .edit {
+    position: absolute;
+    left:100%;
+    top:-2px;
+    z-index: 1;
+    display: block;
+    height: 100%;
+}
 .create .list_wrapper {
     height: auto;
 }
 
-.create input {
+.editMode input {
     padding: 3px 15px;
     width: 100%;
     font-size: 14px;
 }
-.create .option {
+.editMode .option {
     position: relative;
     padding: 1px;
     width: 100%;
@@ -300,36 +335,33 @@ img {
     align-items: center;
     justify-content: space-between;
 }
-.create .option input {
+.editMode .option input {
     position: absolute;
     bottom: 0;
     left: 0;
     font-size: 16px;
 }
-.create .option textarea {
+.editMode .option textarea {
     font-size: 12px;
     width: 100%;
     min-height: 52px;
+    margin: 0 10px;
 }
-.create .option .btn {
 
-}
 .create .option img {
     width: 43px;
     height: 43px;
     border-radius: 14px;
 }
-.create .options_wrapper {
+.options_wrapper.editMode  {
     padding: 9px 0;
     flex-direction: column;
 }
-.create .options_wrapper .add-option-btn {
-    width: 100%;
-}
+
 .create .info_block {
     padding: 0 15px;
 }
-.create .main-info {
+.main-info.editMode {
     padding-left: 0;
 }
 
@@ -365,8 +397,8 @@ img {
     background: #761c19;
     color: #ffffff;
     border-left:1px solid #5e5e5e;
-
 }
+
 .create .price_block_inputs .old_price:before,
 .create .price_block_inputs .old_price:after {
     top: 14px;
@@ -384,8 +416,11 @@ img {
     position: relative;
     margin-top: 15px;
 }
-.create .save {
+.edit .btn.save {
     width: 100%;
+    background-color:#f90;
+    color:#000000;
+    margin-top: 50%;
 }
 .create .price_block_inputs {
     border:1px solid #dadada;
@@ -400,13 +435,16 @@ img {
     display: inline-flex;
 
 }
-.create .current_multiple_price {
+.current_multiple_price {
     display: flex;
     width: 100%;
-
+    justify-content: space-around;
+    align-items: center;
 }
 .multi_title {
-font-size: 16px;
+    font-size: 14px;
+    width: 60%;
+    text-align: left;
 }
 .multi_price {
     font-size: 33px;
