--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -38,15 +38,25 @@
                     </div>
                 </div>
                 <div class="info_block">
-                    <ul class="main-info">
-                        <li><b>Дисплей:</b> {{item.display}}</li>
-                        <li><b>Чипсет:</b> {{item.chipset}}</li>
-                        <li><b>Память:</b> {{item.ram}}</li>
-                        <li *ngIf="item.battery"><b>Батарея:</b> {{item.battery}}</li>
-                        <li *ngIf="item.functions"><b>Функции:</b>{{item.functions}}</li>
-                        <li><b>OC:</b> {{item.os}}</li>
-                        <li *ngIf="item.other"><b>Другое:</b> {{item.other}}</li>
-                    </ul>
+                    <ng-container *ngIf="item.ownOptions">
+                        <ul class="main-info" *ngIf="activeElement != 'info'">
+                            <li *ngFor="let own of item.portativeOptions">
+                                <b>{{own.title}}:</b> {{own.text}}
+                            </li>
+                        </ul>
+                    </ng-container>
+                    <ng-container *ngIf="!item.ownOptions">
+                        <ul class="main-info">
+                            <li><b>Дисплей:</b> {{item.display}}</li>
+                            <li><b>Чипсет:</b> {{item.chipset}}</li>
+                            <li><b>Память:</b> {{item.ram}}</li>
+                            <li *ngIf="item.battery"><b>Батарея:</b> {{item.battery}}</li>
+                            <li *ngIf="item.functions"><b>Функции:</b>{{item.functions}}</li>
+                            <li><b>OC:</b> {{item.os}}</li>
+                            <li *ngIf="item.other"><b>Другое:</b> {{item.other}}</li>
+                        </ul>
+                    </ng-container>
+
                     <div class="price_block text-center" *ngIf="item.qntPrice == 1">
                         <div class="price_wrapper" *ngIf="item.preorder">
                             <div class="preorder">ПРЕДЗАКАЗ</div>
